[package]
name = "osm42-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Async Runtime
axum = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.52", features = ["full"] }
bytes = "1.11"

# Cache & Dedup
moka = { version = "0.12", features = ["future"] }
walkdir = "2.5"

# Env & Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# MapLibre
maplibre_native = { version = "0.8", features = ["vulkan"] }
image = "0.25"
url = "2.5"

# cli
clap = { version = "4.6", features = ["derive", "env"] }
clap_derive = { version = "4.6" }

# benchmark
rand = "0.8"

# catalog json parsing
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
